--- a/src/routes/App/App.css
+++ b/src/routes/App/App.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 0 0 10% 0;
-    overflow: scroll;
+    overflow: hidden;
     text-align: center;
+    z-index: 1;
 }
