Some small fixes to the unity controls logic. EOD commit

--- a/src/components/UnityControls/UnityControls.css
+++ b/src/components/UnityControls/UnityControls.css
@@ -11,10 +11,10 @@
     background: transparent;
 }
 
-.unity-control-button :active {
+.unity-control-button:active {
   opacity: 0.5
 }
-.unity-control-button :disabled {
-  opacity: 0.5
+.unity-control-button:disabled {
+  opacity: 0.5;
 }
 
