--- a/src/routes/Shop/Shop.css
+++ b/src/routes/Shop/Shop.css
@@ -1,21 +1,40 @@
+#shop-screen{
+    z-index: 1;
+}
+
+#go-to-checkout{
+    position: relative;
+}
+
+#design-change-controls-container {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 92%;
+}
+
+.design-change-arrow{
+    background-color: transparent;
+    outline: none;
+    border: none;
+    vertical-align: middle;
+}
+
+.arrow-image{
+    height: 40px;
+}
+
 .dot {
+    background-color: #bbb;
     height: 15px;
     width: 15px;
-    margin: 0 2px 0 0;
-    background-color: black;
+    margin: 0 2px 0 2px;
     border-radius: 50%;
     display: inline-block;
+    vertical-align: middle;
 }
 
 
 #dot-active {
     background-color: #717171;
 }
-
-#dots-container {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    top: 90%;
-}
-
