--- a/src/routes/Welcome/Welcome.css
+++ b/src/routes/Welcome/Welcome.css
@@ -1,10 +1,62 @@
+#rider{
+    width: 100%;
+    height: 60%;
+    object-fit: cover;
+}
+
+#boards{
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    opacity: .8;
+}
+
+#title-container{
+    position: absolute;
+    display: inline-block;
+    top: 15%;
+    right: 3%;
+    width: 30%;
+    height: 40%;
+}
+
+#title{
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 100%;
+}
+
 #loading-message{
-    margin: 20% 0 0 0;
+    position: absolute;
+    display: inline-block;
+    top: 70%;
+    width: 50%;
+    left: 50%;
     -webkit-animation: flickerAnimation 2s infinite;
     -moz-animation: flickerAnimation 2s infinite;
     -o-animation: flickerAnimation 2s infinite;
     animation: flickerAnimation 2s infinite;
 }
+
+#start-message{
+    position: absolute;
+    display: inline-block;
+    top: 68%;
+    width: 30%;
+    left: 50%;
+    border: thin solid grey;
+    border-radius: 20%;
+    padding: 5px 0 0 0;
+}
+
+
+#start-message:hover{
+    opacity: .5;
+}
+
 
 @keyframes flickerAnimation {
     0%   { opacity:1; }
