EOD commit- part of logic for checkout screen is in place

--- a/src/routes/App/App.css
+++ b/src/routes/App/App.css
@@ -14,4 +14,9 @@
     background: transparent;
     border: none;
     outline: none;
+    z-index:2;
+}
+
+.no-style-button:hover{
+    opacity: .5;
 }
