Logic working, need to fix initial state reset

--- a/src/routes/Checkout/Checkout.css
+++ b/src/routes/Checkout/Checkout.css
@@ -36,3 +36,10 @@
     left: 40%;
     right: 40%;
 }
+
+#cart-total{
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    max-width: 15%;
+}
