--- a/src/routes/App/App.css
+++ b/src/routes/App/App.css
@@ -7,7 +7,8 @@
     overflow: hidden;
     text-align: center;
     z-index: 1;
-    background-color: #f8f8f8
+    background-color: #f8f8f8;
+    user-select: none;
 }
 
 .no-style-button{
