--- a/src/routes/Welcome/Welcome.css
+++ b/src/routes/Welcome/Welcome.css
@@ -35,10 +35,8 @@
     top: 70%;
     width: 50%;
     left: 50%;
-    -webkit-animation: flickerAnimation 2s infinite;
-    -moz-animation: flickerAnimation 2s infinite;
-    -o-animation: flickerAnimation 2s infinite;
     animation: flickerAnimation 2s infinite;
+    object-fit: contain;
 }
 
 #start-message{
