--- a/src/routes/Shop/Shop.css
+++ b/src/routes/Shop/Shop.css
@@ -1,65 +1,68 @@
 #shop-screen{
     z-index: 1;
     text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 #shop-header-container{
     z-index: 1;
-    position: absolute;
+    position: relative;
     display: inline-block;
-    top: 0;
-    left: 40%;
-    width: 20%;
-    height: 20%;
+    top: -3vh;
 }
 
 #shop-header{
-    position: absolute;
     display: inline-block;
-    top: 0;
-    left: 10%;
-    width: 80%;
-    height: 100%;
+    max-width: 50%;
 }
 
 #design-info{
+    display:block;
     text-align: left;
     position: absolute;
-    left: 10%;
-    max-width: 20%;
     top: 60%;
-    font-family: 'Raleway', sans-serif;
+    left: 5%;
+    max-width: 20%;
+    font-size: calc(.6vw + 5px);
 }
 
-#design-info h3{
+#design-info h2{
     font-family: 'SaintFont', 'Raleway', sans-serif;
 }
 
-#add-to-cart-button{
-    margin: 10px 0 0 0;
+#add-to-cart{
+    display:block;
+    margin: .5vh auto;
     border: thin grey solid;
     border-radius: 45%;
-}
-
-#go-to-checkout{
-    position: absolute;
-    top: 2%;
-    right: 2%;
+    font-size: calc(0.8vw + 5px);
 }
 
 #added-to-cart{
+    display:block;
+    margin: .5vh auto;
+    animation: appearDisappear 3s 1;
+    font-size: calc(0.8vw + 5px);
+}
+
+
+#go-to-checkout{
     position: absolute;
-    top: 25%;
-    left: 40%;
-    width: 20%;
-    animation: appearDisappear 2s 1;
+    top: 4%;
+    right: 1%;
+}
+
+#go-to-checkout img{
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
 }
 
 #design-change-controls-container {
     text-align: center;
     position: absolute;
     width: 100%;
-    top: 92%;
+    top: 90%;
 }
 
 .design-change-arrow{
