--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,14 +1,32 @@
 .cart-item{
     position: relative;
-    left: 20%;
     /*display: inline-block;*/
     margin: 40px 10px 10px 10px;
-    max-width: 40%;
+    max-width: 70%;
 }
 
 .cart-item-image{
     width: 100%;
     object-fit: contain;
+    border-radius: 5%;
+}
+
+.cart-item-info{
+    text-align: left;
+    margin: 10px 0 0 20px;
+}
+
+.remove-from-cart{
+    background-color: #adadad80;
+    border-radius: 5%;
+    border: none;
+    outline: none;
+    z-index:2;
+    margin: 5px 0 0 0;
+}
+
+.remove-from-cart:hover{
+    opacity: .5;
 }
 
 input{
