--- a/src/routes/Checkout/Checkout.css
+++ b/src/routes/Checkout/Checkout.css
@@ -1,10 +1,21 @@
 #checkout-screen{
     z-index: 1;
+    font-family: 'Raleway', sans-serif;
+}
+
+#checkout-background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0.4;
+    object-fit: cover;
 }
 
 #checkout-header-container{
     position: relative;
-    width: 20%;
+    width: 40%;
     height: 20%;
 }
 
@@ -12,34 +23,87 @@
     display: inline-block;
     top: 0;
     left: 0;
-    height: 100%;
+    max-width: 100%;
 }
 
 #back-button{
     position: absolute;
-    top: 35%;
-    left: 20%;
+    top: 30%;
+    left: 15%;
 }
 
 #cart-items{
     position: absolute;
     top: 0;
-    left: 20%;
+    left: 50%;
     right: 0;
+    max-width: 50%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-#empty-cart-button{
+#cart-total{
+    text-align: left;
+    position: relative;
+    left: 34%;
+    top: -1vh;
+    font-size: calc(1vw + 5px);
+}
+
+#confirm-purchase{
+    font-size: calc(.6vw + 5px);
+    margin: 1% 0 0 2%;
+    background-color: #adadad80;
+    border-radius: 5%;
+}
+
+#empty-cart{
     position: absolute;
     top: 20%;
     left: 40%;
     right: 40%;
+    font-size: calc(.6vw + 5px);
 }
 
-#cart-total{
-    position: absolute;
-    top: 20%;
-    right: 10%;
-    max-width: 15%;
+
+#receipt-screen{
+    font-family: 'Raleway', sans-serif;
+    text-align: left;
+}
+
+#receipt-info{
+    position: relative;
+    left: 33%;
+    max-width: 33%;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#receipt-info div{
+    max-width: 100%;
+    margin: 2% 0 0 2%;
+}
+
+.purchaed-item{
+    padding: 0 0 2% 0;
+    border-bottom: 2px solid #aaa;
+}
+
+#final-options-container{
+    text-align: center;
+}
+
+.final-options{
+    font-size: calc(.6vw + 5px);
+    margin: 1% 0 0 2%;
+    background-color: #adadad80;
+    border-radius: 5%;
+    border: none;
+    outline: none;
+    z-index:2;
+}
+
+.final-options:hover{
+    opacity: 0.5;
 }
