--- a/src/routes/Welcome/Welcome.css
+++ b/src/routes/Welcome/Welcome.css
@@ -70,10 +70,10 @@
     right: 0;
     min-height: 5%;
     border-radius: 2%;
-    padding: 5px 0 5px 0;
     text-align: center;
     font-family: 'Raleway', sans-serif;
     font-size: calc(2vw + 5px);
     background: rgba(255, 255, 255, 1);
     vertical-align: middle;
+    padding: 5px 10px 5px 10px;
 }
